--- a/src/__ae-catalog.html
+++ b/src/__ae-catalog.html
@@ -29,12 +29,12 @@
 								<a href="#" class="list-view" data-title="Показать товары списком"><span>Списком</span></a>
 							</div>
 							<!--view switcher end-->
-							<div class="layout-flood">
+							<div class="layout-wide">
 								<!--catalog-->
 								<div class="catalog grid-view-activated">
-									<div class="catalog__list">
+									<section class="catalog__list">
 										@@loop("_catalog-items.tpl", "includes-json/catalog-items.json")
-									</div>
+									</section>
 								</div>
 								<!--catalog end-->
 							</div>
