--- a/src/ae-catalog.html
+++ b/src/ae-catalog.html
@@ -194,11 +194,11 @@
 									<a href="#" class="list-view" data-title="Показать товары списком"><span>Списком</span></a>
 								</div>
 								<!--view switcher end-->
-								<div class="layout-flood">
+								<div class="layout-wide">
 									<!--catalog-->
 									<div class="catalog grid-view-activated">
-										<div class="catalog__list">
-											<div class="catalog__item">
+										<section class="catalog__list">
+											<article class="catalog__item">
 												<div class="catalog__inner">
 													<div class="catalog__figure">
 														<div class="catalog__img">
@@ -229,8 +229,8 @@
 														</div>
 													</div>
 												</div>
-											</div>
-											<div class="catalog__item">
+											</article>
+											<article class="catalog__item">
 												<div class="catalog__inner">
 													<div class="catalog__figure">
 														<div class="catalog__img">
@@ -260,8 +260,8 @@
 														</div>
 													</div>
 												</div>
-											</div>
-											<div class="catalog__item">
+											</article>
+											<article class="catalog__item">
 												<div class="catalog__inner">
 													<div class="catalog__figure">
 														<div class="catalog__img">
@@ -279,8 +279,8 @@
 														</div>
 													</div>
 												</div>
-											</div>
-											<div class="catalog__item">
+											</article>
+											<article class="catalog__item">
 												<div class="catalog__inner">
 													<div class="catalog__figure">
 														<div class="catalog__img">
@@ -297,8 +297,8 @@
 														</div>
 													</div>
 												</div>
-											</div>
-											<div class="catalog__item">
+											</article>
+											<article class="catalog__item">
 												<div class="catalog__inner">
 													<div class="catalog__figure">
 														<div class="catalog__img">
@@ -315,8 +315,8 @@
 														</div>
 													</div>
 												</div>
-											</div>
-											<div class="catalog__item">
+											</article>
+											<article class="catalog__item">
 												<div class="catalog__inner">
 													<div class="catalog__figure">
 														<div class="catalog__img">
@@ -335,8 +335,8 @@
 														</div>
 													</div>
 												</div>
-											</div>
-											<div class="catalog__item">
+											</article>
+											<article class="catalog__item">
 												<div class="catalog__inner">
 													<div class="catalog__figure">
 														<div class="catalog__img">
@@ -358,8 +358,8 @@
 														</div>
 													</div>
 												</div>
-											</div>
-											<div class="catalog__item">
+											</article>
+											<article class="catalog__item">
 												<div class="catalog__inner">
 													<div class="catalog__figure">
 														<div class="catalog__img">
@@ -376,8 +376,8 @@
 														</div>
 													</div>
 												</div>
-											</div>
-											<div class="catalog__item">
+											</article>
+											<article class="catalog__item">
 												<div class="catalog__inner">
 													<div class="catalog__figure">
 														<div class="catalog__img">
@@ -394,8 +394,8 @@
 														</div>
 													</div>
 												</div>
-											</div>
-										</div>
+											</article>
+										</section>
 									</div>
 									<!--catalog end-->
 								</div>
@@ -452,8 +452,8 @@
 					<div class="catalog-categories__item">
 						<a href="#catalog-menu-item-04" class="catalog-categories__cell js-tab-anchor">
 							<div class="catalog-categories__figure">
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 70.4 93" enable-background="new 0 0 70.4 93">
-								<path d="M67.9,34.1v3H53.9L51,16.5h8.3v8.8h2.5V10.8h-2.5V14h-9.2L35.2,0L20.3,14H11v-3.3H8.5v14.6H11v-8.8h8.3  l-2.9,20.6H2.5v-3H0v14.6h2.5v-9.1h13.6L8.6,93h53.2l-7.5-53.3h13.6v9.1h2.5V34.1H67.9z M51.1,35.1l-13.4-9.9l10.9-7.8L51.1,35.1z   M19,60l16.4-9.7L51.7,60H19z M49.7,62.5l-14.6,7.8l-14.6-7.8H49.7z M22.4,39.7h26.2l-13.2,7.8L22.4,39.7z M20.9,37.2l14.7-10.5  l14.1,10.5H20.9z M26,16.5h19.5l-9.9,7.1L26,16.5z M35.2,3.4L46.5,14H23.9L35.2,3.4z M21.9,16.6l11.6,8.6L19.2,35.3L21.9,16.6z   M18.5,40.3L33,48.9L15.9,59L18.5,40.3z M15.4,62.7l17,9.1L12.6,82.4L15.4,62.7z M58.9,90.5H11.5l0.7-5l22.9-12.3l23.1,12.4  L58.9,90.5z M55,62.5l2.8,20L37.7,71.8L55,62.5L55,62.5z M54.4,58.8l-16.6-9.9l14-8.3L54.4,58.8z"></path>
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 92.5 71.9" enable-background="new 0 0 92.5 71.9">
+								<path d="M25.8,49H6.7v13.3h19.1V49z M23.3,59.8H9.2v-8.3h14.1V59.8z M55.5,9.3H37v2.5h18.6V9.3z M37.3,60.9h3v-3h-3  V60.9z M44.7,60.9h3v-3h-3V60.9z M52.2,60.9h3v-3h-3V60.9z M52.2,28.2h3v-3h-3V28.2z M10.3,7.5h-3v3h3V7.5z M10.3,41.3v-3h-3v3H10.3  z M17.8,7.5h-3v3h3V7.5z M25.2,7.5h-3v3h3V7.5z M25.2,14.3h-3v3h3V14.3z M17.8,14.3h-3v3h3V14.3z M10.3,14.3h-3v3h3V14.3z   M25.2,41.3v-3h-3v3H25.2z M17.8,41.3v-3h-3v3H17.8z M25.5,25.9H7v2.5h18.6V25.9z M55.2,18h-3v3h3V18z M82.2,43.9h3v-3h-3V43.9z   M74.7,43.9h3v-3h-3V43.9z M77.8,33.9h-3v3h3V33.9z M85.2,33.9h-3v3h3V33.9z M85.8,51.5H66.7V64h19.1V51.5z M83.3,61.5H69.2V54h14.1  V61.5z M0,0v71.9h92.5V0H0z M30,69.4H2.5V2.5H30V69.4z M60,69.4H32.5V2.5H60V69.4z M90,69.4H62.5V2.5H90V69.4z M70.3,33.9h-3v3h3  V33.9z M85.5,25.9H67v2.5h18.6V25.9z M67.3,43.9h3v-3h-3V43.9z M55.8,34.8H36.7v12.5h19.1V34.8z M53.3,44.8H39.2v-7.5h14.1V44.8z   M47.8,18h-3v3h3V18z M37.3,28.2h3v-3h-3V28.2z M40.3,18h-3v3h3V18z M44.7,28.2h3v-3h-3V28.2z M85.2,21.1v-3h-3v3H85.2z M77.8,21.1  v-3h-3v3H77.8z M70.3,21.1v-3h-3v3H70.3z M85.5,9.3H67v2.5h18.6V9.3z"></path>
 							</svg>
 							</div>
 							<div class="catalog-categories__title">
@@ -464,8 +464,8 @@
 					<div class="catalog-categories__item">
 						<a href="#catalog-menu-item-05" class="catalog-categories__cell js-tab-anchor">
 							<div class="catalog-categories__figure">
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 70.4 93" enable-background="new 0 0 70.4 93">
-								<path d="M67.9,34.1v3H53.9L51,16.5h8.3v8.8h2.5V10.8h-2.5V14h-9.2L35.2,0L20.3,14H11v-3.3H8.5v14.6H11v-8.8h8.3  l-2.9,20.6H2.5v-3H0v14.6h2.5v-9.1h13.6L8.6,93h53.2l-7.5-53.3h13.6v9.1h2.5V34.1H67.9z M51.1,35.1l-13.4-9.9l10.9-7.8L51.1,35.1z   M19,60l16.4-9.7L51.7,60H19z M49.7,62.5l-14.6,7.8l-14.6-7.8H49.7z M22.4,39.7h26.2l-13.2,7.8L22.4,39.7z M20.9,37.2l14.7-10.5  l14.1,10.5H20.9z M26,16.5h19.5l-9.9,7.1L26,16.5z M35.2,3.4L46.5,14H23.9L35.2,3.4z M21.9,16.6l11.6,8.6L19.2,35.3L21.9,16.6z   M18.5,40.3L33,48.9L15.9,59L18.5,40.3z M15.4,62.7l17,9.1L12.6,82.4L15.4,62.7z M58.9,90.5H11.5l0.7-5l22.9-12.3l23.1,12.4  L58.9,90.5z M55,62.5l2.8,20L37.7,71.8L55,62.5L55,62.5z M54.4,58.8l-16.6-9.9l14-8.3L54.4,58.8z"></path>
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 92.5 81.2" enable-background="new 0 0 92.5 81.2">
+								<path d="M18.7,81.2h63.9v-2.5H18.7V81.2z M73.9,39.2h-2.5v22.4h2.5V39.2z M79.4,27.6V25h-22v2.5H46.5V25h-5.9  L38,22.1h51.7v-2.5h-8.8v-1.1c1-0.2,2.1-0.6,3-1.1c0.9-0.5,1.3-1.2,1.3-2.1c0-0.9-0.6-1.7-1.6-2.2c1.3-0.7,1.5-1.7,1.5-2.1  S84.9,9.7,83.6,9c1-0.5,1.6-1.3,1.6-2.2c0-0.8-0.4-1.6-1.3-2.1c-0.9-0.5-2-0.9-3-1.1V1.3h-2.5v2.5c-1,0.2-2,0.6-2.7,1  c-1,0.5-1.5,1.3-1.5,2.1c0,0.9,0.6,1.6,1.6,2.1c-1.4,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.4,1.5,2.1c-1,0.5-1.6,1.3-1.6,2.1  c0,0.9,0.5,1.6,1.5,2.1c0.7,0.4,1.8,0.8,2.7,1v1.2H63.8v-1.1c1-0.2,2.1-0.6,3-1.1c0.9-0.5,1.3-1.2,1.3-2.1c0-0.9-0.6-1.7-1.6-2.2  c1.3-0.7,1.5-1.7,1.5-2.1S67.9,9.7,66.5,9c1-0.5,1.6-1.3,1.6-2.2c0-0.8-0.4-1.6-1.3-2.1c-0.9-0.5-2-0.9-3-1.1V1.3h-2.5v2.5  c-1,0.2-2,0.6-2.7,1c-1,0.5-1.5,1.3-1.5,2.1c0,0.9,0.6,1.6,1.6,2.1c-1.4,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.4,1.5,2.1  c-1,0.5-1.6,1.3-1.6,2.1c0,0.9,0.5,1.6,1.5,2.1c0.7,0.4,1.8,0.8,2.7,1v1.2H46.8v-1.1c1-0.2,2.1-0.6,3-1.1c0.9-0.5,1.3-1.2,1.3-2.1  c0-0.9-0.6-1.7-1.6-2.2c1.3-0.7,1.5-1.7,1.5-2.1S50.8,9.7,49.5,9c1-0.5,1.6-1.3,1.6-2.2c0-0.8-0.4-1.6-1.3-2.1c-0.9-0.5-2-0.9-3-1.1  V1.3h-2.5v2.5c-1,0.2-2,0.6-2.7,1c-1,0.5-1.5,1.3-1.5,2.1c0,0.9,0.6,1.6,1.6,2.1c-1.4,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.4,1.5,2.1  c-1,0.5-1.6,1.3-1.6,2.1c0,0.9,0.5,1.6,1.5,2.1c0.7,0.4,1.8,0.8,2.7,1v1.2h-8.6L22.4,4.8C20.1,1.9,16.5,0,12.5,0C5.6,0,0,5.6,0,12.5  S5.6,25,12.5,25c3.2,0,6.2-1.2,8.4-3.2l3.6,3.9v1.9H8.7v45.7h15.8v2.5h22v-2.5h10.9v2.5h22v-2.5h13.1V27.6H79.4z M77,15.3  c1.5-0.7,1.6-1.7,1.6-2.2c0-0.4-0.2-1.4-1.5-2.1c1.4-0.7,1.5-1.7,1.5-2.1c0-0.4-0.2-1.5-1.6-2.2C78,6.3,79.3,6,79.8,6  c0.5,0,1.7,0.3,2.6,0.8c0,0,0,0,0,0c-1.5,0.7-1.7,1.8-1.7,2.2c0,0.4,0.1,1.4,1.5,2.1c-1.3,0.7-1.5,1.7-1.5,2.1  c0,0.4,0.2,1.5,1.7,2.2c0,0,0,0,0,0c-0.9,0.4-2,0.8-2.6,0.8C79.3,16.1,78,15.8,77,15.3z M60,15.3c1.5-0.7,1.6-1.7,1.6-2.2  c0-0.4-0.2-1.4-1.5-2.1c1.4-0.7,1.5-1.7,1.5-2.1c0-0.4-0.2-1.5-1.6-2.2C61,6.3,62.2,6,62.8,6c0.5,0,1.7,0.3,2.6,0.8c0,0,0,0,0,0  c-1.5,0.7-1.7,1.8-1.7,2.2c0,0.4,0.1,1.4,1.5,2.1c-1.3,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.5,1.7,2.2c0,0,0,0,0,0  c-0.9,0.4-2,0.8-2.6,0.8C62.2,16.1,61,15.8,60,15.3z M42.9,15.3c1.5-0.7,1.6-1.7,1.6-2.2c0-0.4-0.2-1.4-1.5-2.1  c1.4-0.7,1.5-1.7,1.5-2.1c0-0.4-0.2-1.5-1.6-2.2c1-0.5,2.3-0.8,2.8-0.8c0.5,0,1.7,0.3,2.6,0.8c0,0,0,0,0,0c-1.5,0.7-1.7,1.8-1.7,2.2  c0,0.4,0.1,1.4,1.5,2.1c-1.3,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.5,1.7,2.2c0,0,0,0,0,0c-0.9,0.4-2,0.8-2.6,0.8  C45.2,16.1,43.9,15.8,42.9,15.3z M24.5,70.8H11.2V30.1h13.3V70.8z M20.8,18l-7.7-8.3l-1.8,1.7l7.8,8.5c-1.8,1.6-4.1,2.6-6.7,2.6  c-5.5,0-10-4.5-10-10s4.5-10,10-10c3,0,5.7,1.3,7.5,3.4l0,0l0.4,0.5c1.3,1.7,2.1,3.8,2.1,6C22.5,14.5,21.9,16.4,20.8,18z M22.6,19.9  c1.5-2.1,2.4-4.6,2.4-7.4c0-0.4,0-0.7-0.1-1.1L37.2,25h-10L22.6,19.9z M44,73.3H27V27.5h17V73.3z M57.4,70.8H46.5V30.1h10.9V70.8z   M76.9,73.3h-17V27.5h17V73.3z M90,70.8H79.4V30.1H90V70.8z M36.7,39.2h-2.5v22.4h2.5V39.2z M32.5,39.2H30v22.4h2.5V39.2z M41,39.2  h-2.5v22.4H41V39.2z M69.6,39.2h-2.5v22.4h2.5V39.2z M65.4,39.2h-2.5v22.4h2.5V39.2z"></path>
 							</svg>
 							</div>
 							<div class="catalog-categories__title">
@@ -488,8 +488,8 @@
 					<div class="catalog-categories__item">
 						<a href="#catalog-menu-item-07" class="catalog-categories__cell js-tab-anchor">
 							<div class="catalog-categories__figure">
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 70.4 93" enable-background="new 0 0 70.4 93">
-								<path d="M67.9,34.1v3H53.9L51,16.5h8.3v8.8h2.5V10.8h-2.5V14h-9.2L35.2,0L20.3,14H11v-3.3H8.5v14.6H11v-8.8h8.3  l-2.9,20.6H2.5v-3H0v14.6h2.5v-9.1h13.6L8.6,93h53.2l-7.5-53.3h13.6v9.1h2.5V34.1H67.9z M51.1,35.1l-13.4-9.9l10.9-7.8L51.1,35.1z   M19,60l16.4-9.7L51.7,60H19z M49.7,62.5l-14.6,7.8l-14.6-7.8H49.7z M22.4,39.7h26.2l-13.2,7.8L22.4,39.7z M20.9,37.2l14.7-10.5  l14.1,10.5H20.9z M26,16.5h19.5l-9.9,7.1L26,16.5z M35.2,3.4L46.5,14H23.9L35.2,3.4z M21.9,16.6l11.6,8.6L19.2,35.3L21.9,16.6z   M18.5,40.3L33,48.9L15.9,59L18.5,40.3z M15.4,62.7l17,9.1L12.6,82.4L15.4,62.7z M58.9,90.5H11.5l0.7-5l22.9-12.3l23.1,12.4  L58.9,90.5z M55,62.5l2.8,20L37.7,71.8L55,62.5L55,62.5z M54.4,58.8l-16.6-9.9l14-8.3L54.4,58.8z"></path>
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 92.5 71.9" enable-background="new 0 0 92.5 71.9">
+								<path d="M25.8,49H6.7v13.3h19.1V49z M23.3,59.8H9.2v-8.3h14.1V59.8z M55.5,9.3H37v2.5h18.6V9.3z M37.3,60.9h3v-3h-3  V60.9z M44.7,60.9h3v-3h-3V60.9z M52.2,60.9h3v-3h-3V60.9z M52.2,28.2h3v-3h-3V28.2z M10.3,7.5h-3v3h3V7.5z M10.3,41.3v-3h-3v3H10.3  z M17.8,7.5h-3v3h3V7.5z M25.2,7.5h-3v3h3V7.5z M25.2,14.3h-3v3h3V14.3z M17.8,14.3h-3v3h3V14.3z M10.3,14.3h-3v3h3V14.3z   M25.2,41.3v-3h-3v3H25.2z M17.8,41.3v-3h-3v3H17.8z M25.5,25.9H7v2.5h18.6V25.9z M55.2,18h-3v3h3V18z M82.2,43.9h3v-3h-3V43.9z   M74.7,43.9h3v-3h-3V43.9z M77.8,33.9h-3v3h3V33.9z M85.2,33.9h-3v3h3V33.9z M85.8,51.5H66.7V64h19.1V51.5z M83.3,61.5H69.2V54h14.1  V61.5z M0,0v71.9h92.5V0H0z M30,69.4H2.5V2.5H30V69.4z M60,69.4H32.5V2.5H60V69.4z M90,69.4H62.5V2.5H90V69.4z M70.3,33.9h-3v3h3  V33.9z M85.5,25.9H67v2.5h18.6V25.9z M67.3,43.9h3v-3h-3V43.9z M55.8,34.8H36.7v12.5h19.1V34.8z M53.3,44.8H39.2v-7.5h14.1V44.8z   M47.8,18h-3v3h3V18z M37.3,28.2h3v-3h-3V28.2z M40.3,18h-3v3h3V18z M44.7,28.2h3v-3h-3V28.2z M85.2,21.1v-3h-3v3H85.2z M77.8,21.1  v-3h-3v3H77.8z M70.3,21.1v-3h-3v3H70.3z M85.5,9.3H67v2.5h18.6V9.3z"></path>
 							</svg>
 							</div>
 							<div class="catalog-categories__title">
@@ -500,8 +500,8 @@
 					<div class="catalog-categories__item">
 						<a href="#catalog-menu-item-08" class="catalog-categories__cell js-tab-anchor">
 							<div class="catalog-categories__figure">
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 70.4 93" enable-background="new 0 0 70.4 93">
-								<path d="M67.9,34.1v3H53.9L51,16.5h8.3v8.8h2.5V10.8h-2.5V14h-9.2L35.2,0L20.3,14H11v-3.3H8.5v14.6H11v-8.8h8.3  l-2.9,20.6H2.5v-3H0v14.6h2.5v-9.1h13.6L8.6,93h53.2l-7.5-53.3h13.6v9.1h2.5V34.1H67.9z M51.1,35.1l-13.4-9.9l10.9-7.8L51.1,35.1z   M19,60l16.4-9.7L51.7,60H19z M49.7,62.5l-14.6,7.8l-14.6-7.8H49.7z M22.4,39.7h26.2l-13.2,7.8L22.4,39.7z M20.9,37.2l14.7-10.5  l14.1,10.5H20.9z M26,16.5h19.5l-9.9,7.1L26,16.5z M35.2,3.4L46.5,14H23.9L35.2,3.4z M21.9,16.6l11.6,8.6L19.2,35.3L21.9,16.6z   M18.5,40.3L33,48.9L15.9,59L18.5,40.3z M15.4,62.7l17,9.1L12.6,82.4L15.4,62.7z M58.9,90.5H11.5l0.7-5l22.9-12.3l23.1,12.4  L58.9,90.5z M55,62.5l2.8,20L37.7,71.8L55,62.5L55,62.5z M54.4,58.8l-16.6-9.9l14-8.3L54.4,58.8z"></path>
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 92.5 81.2" enable-background="new 0 0 92.5 81.2">
+								<path d="M18.7,81.2h63.9v-2.5H18.7V81.2z M73.9,39.2h-2.5v22.4h2.5V39.2z M79.4,27.6V25h-22v2.5H46.5V25h-5.9  L38,22.1h51.7v-2.5h-8.8v-1.1c1-0.2,2.1-0.6,3-1.1c0.9-0.5,1.3-1.2,1.3-2.1c0-0.9-0.6-1.7-1.6-2.2c1.3-0.7,1.5-1.7,1.5-2.1  S84.9,9.7,83.6,9c1-0.5,1.6-1.3,1.6-2.2c0-0.8-0.4-1.6-1.3-2.1c-0.9-0.5-2-0.9-3-1.1V1.3h-2.5v2.5c-1,0.2-2,0.6-2.7,1  c-1,0.5-1.5,1.3-1.5,2.1c0,0.9,0.6,1.6,1.6,2.1c-1.4,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.4,1.5,2.1c-1,0.5-1.6,1.3-1.6,2.1  c0,0.9,0.5,1.6,1.5,2.1c0.7,0.4,1.8,0.8,2.7,1v1.2H63.8v-1.1c1-0.2,2.1-0.6,3-1.1c0.9-0.5,1.3-1.2,1.3-2.1c0-0.9-0.6-1.7-1.6-2.2  c1.3-0.7,1.5-1.7,1.5-2.1S67.9,9.7,66.5,9c1-0.5,1.6-1.3,1.6-2.2c0-0.8-0.4-1.6-1.3-2.1c-0.9-0.5-2-0.9-3-1.1V1.3h-2.5v2.5  c-1,0.2-2,0.6-2.7,1c-1,0.5-1.5,1.3-1.5,2.1c0,0.9,0.6,1.6,1.6,2.1c-1.4,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.4,1.5,2.1  c-1,0.5-1.6,1.3-1.6,2.1c0,0.9,0.5,1.6,1.5,2.1c0.7,0.4,1.8,0.8,2.7,1v1.2H46.8v-1.1c1-0.2,2.1-0.6,3-1.1c0.9-0.5,1.3-1.2,1.3-2.1  c0-0.9-0.6-1.7-1.6-2.2c1.3-0.7,1.5-1.7,1.5-2.1S50.8,9.7,49.5,9c1-0.5,1.6-1.3,1.6-2.2c0-0.8-0.4-1.6-1.3-2.1c-0.9-0.5-2-0.9-3-1.1  V1.3h-2.5v2.5c-1,0.2-2,0.6-2.7,1c-1,0.5-1.5,1.3-1.5,2.1c0,0.9,0.6,1.6,1.6,2.1c-1.4,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.4,1.5,2.1  c-1,0.5-1.6,1.3-1.6,2.1c0,0.9,0.5,1.6,1.5,2.1c0.7,0.4,1.8,0.8,2.7,1v1.2h-8.6L22.4,4.8C20.1,1.9,16.5,0,12.5,0C5.6,0,0,5.6,0,12.5  S5.6,25,12.5,25c3.2,0,6.2-1.2,8.4-3.2l3.6,3.9v1.9H8.7v45.7h15.8v2.5h22v-2.5h10.9v2.5h22v-2.5h13.1V27.6H79.4z M77,15.3  c1.5-0.7,1.6-1.7,1.6-2.2c0-0.4-0.2-1.4-1.5-2.1c1.4-0.7,1.5-1.7,1.5-2.1c0-0.4-0.2-1.5-1.6-2.2C78,6.3,79.3,6,79.8,6  c0.5,0,1.7,0.3,2.6,0.8c0,0,0,0,0,0c-1.5,0.7-1.7,1.8-1.7,2.2c0,0.4,0.1,1.4,1.5,2.1c-1.3,0.7-1.5,1.7-1.5,2.1  c0,0.4,0.2,1.5,1.7,2.2c0,0,0,0,0,0c-0.9,0.4-2,0.8-2.6,0.8C79.3,16.1,78,15.8,77,15.3z M60,15.3c1.5-0.7,1.6-1.7,1.6-2.2  c0-0.4-0.2-1.4-1.5-2.1c1.4-0.7,1.5-1.7,1.5-2.1c0-0.4-0.2-1.5-1.6-2.2C61,6.3,62.2,6,62.8,6c0.5,0,1.7,0.3,2.6,0.8c0,0,0,0,0,0  c-1.5,0.7-1.7,1.8-1.7,2.2c0,0.4,0.1,1.4,1.5,2.1c-1.3,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.5,1.7,2.2c0,0,0,0,0,0  c-0.9,0.4-2,0.8-2.6,0.8C62.2,16.1,61,15.8,60,15.3z M42.9,15.3c1.5-0.7,1.6-1.7,1.6-2.2c0-0.4-0.2-1.4-1.5-2.1  c1.4-0.7,1.5-1.7,1.5-2.1c0-0.4-0.2-1.5-1.6-2.2c1-0.5,2.3-0.8,2.8-0.8c0.5,0,1.7,0.3,2.6,0.8c0,0,0,0,0,0c-1.5,0.7-1.7,1.8-1.7,2.2  c0,0.4,0.1,1.4,1.5,2.1c-1.3,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.5,1.7,2.2c0,0,0,0,0,0c-0.9,0.4-2,0.8-2.6,0.8  C45.2,16.1,43.9,15.8,42.9,15.3z M24.5,70.8H11.2V30.1h13.3V70.8z M20.8,18l-7.7-8.3l-1.8,1.7l7.8,8.5c-1.8,1.6-4.1,2.6-6.7,2.6  c-5.5,0-10-4.5-10-10s4.5-10,10-10c3,0,5.7,1.3,7.5,3.4l0,0l0.4,0.5c1.3,1.7,2.1,3.8,2.1,6C22.5,14.5,21.9,16.4,20.8,18z M22.6,19.9  c1.5-2.1,2.4-4.6,2.4-7.4c0-0.4,0-0.7-0.1-1.1L37.2,25h-10L22.6,19.9z M44,73.3H27V27.5h17V73.3z M57.4,70.8H46.5V30.1h10.9V70.8z   M76.9,73.3h-17V27.5h17V73.3z M90,70.8H79.4V30.1H90V70.8z M36.7,39.2h-2.5v22.4h2.5V39.2z M32.5,39.2H30v22.4h2.5V39.2z M41,39.2  h-2.5v22.4H41V39.2z M69.6,39.2h-2.5v22.4h2.5V39.2z M65.4,39.2h-2.5v22.4h2.5V39.2z"></path>
 							</svg>
 							</div>
 							<div class="catalog-categories__title">
