--- a/src/__automatic-catalog.html
+++ b/src/__automatic-catalog.html
@@ -1,16 +1,16 @@
 @@include('_layout_head.tpl', {
 	"title": "ЭA - Каталог",
-	"pageClass": "ea-site ea-catalog-page"
+	"pageClass": "ea-site ea-catalog-page ea-has-catalog-menu"
 })
 
 <!--HEADER-->
-@@include('_layout_header.tpl', {
+@@include('_layout_header--ea.tpl', {
 	"mainNavItemActive": "Заказ"
 })
 <!--HEADER end-->
 
 <!--TOP PANEL-->
-@@include('_layout_top-panel.tpl')
+@@include('_layout_top-panel--ea.tpl')
 <!--TOP PANEL end-->
 
 <!--MAIN-->
@@ -22,6 +22,11 @@
 				<div class="content user-content">
 					<div class="sheet">
 						<div class="layout-article">
+							<div class="layout-text">
+								<!--breadcrumbs-->
+								@@include('_breadcrumbs.tpl')
+								<!--breadcrumbs end-->
+							</div>
 							<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
 							<!--view switcher-->
 							<div class="view-switcher js-view-switcher">
