--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -36,7 +36,7 @@
 	<script src="js/modernizr.min.js"></script>
 </head>
 
-<body class="ea-site ea-catalog-page">
+<body class="ea-site ea-catalog-page ea-has-catalog-menu">
 	<!--[if lt IE 9]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<!--HEADER-->
@@ -46,11 +46,11 @@
 				<div class="header__cell">
 					<div class="logo">
 						<a href="index.html">
-							<div class="logo-img"><span>ДВЭМЗ</span></div>
-							<div class="logo-title"><span>Дальневосточный электромонтажный завод</span></div>
+							<div class="logo-img"><span>&nbsp;</span></div>
+							<div class="logo-title"><span>Электроавтоматика</span></div>
 							<div class="logo-text"><span>Производство и продажа Электромонтажного оборудования</span></div>
 						</a>
-						<img style="display: none;" src="img/logo.png" alt="ДВЭМЗ">
+						<img style="display: none;" src="img/logo-short--ea.png" alt="Электроавтоматика">
 					</div>
 				</div>
 			</div>
@@ -135,7 +135,7 @@
 			</ul>
 		</nav>
 		<div class="nav-footer">
-			<div class="copyright">&copy; 2017 ОАО ДВЭМЗ</div>
+			<div class="copyright">&copy; 2017 ОАО Электроавтоматика</div>
 			<div class="map-site"><a href="#" title="Перейти на карту сайта">Карта сайта</a></div>
 		</div>
 	</div>
@@ -143,39 +143,45 @@
 	<!--HEADER end-->
 	<!--TOP PANEL-->
 	<aside class="top-panel">
-		<div class="logo-alt">
-			<a href="index.html">
-				<div class="logo-alt-title">
-					<div class="logo-alt-title__fig"><span>Дальневосточный электромонтажный завод</span></div>
-				</div>
-				<div class="logo-alt-map">
-					<div class="logo-alt-map__fig"><span>владивосток</span></div>
-				</div>
-			</a>
-			<img style="display: none;" src="img/logo.png" alt="ДВЭМЗ">
-		</div>
-		<div class="top-panel-contacts">
-			<div class="top-panel-contacts__item">
-				<!--contact phones-->
-				<!--<div class="contact-phones js-choice-wrap" data-select="false">-->
-				<div class="contact-phones">
-					<!--<a class="contact-phones__handler js-choice-open" href="#"><span>+7 (423) 230-21-37</span></a>-->
-					<a class="contact-phones__handler" href="tel:+7 (423) 230-21-37"><span>+7 (423) 230-21-37</span></a>
-					<!--<ul class="contact-phones__drop js-choice-drop">
-					<li><a href="tel:+7 (423) 230-20-13"><span>+7 (423) 230-20-13</span></a></li>
-					<li><a href="tel:+7 (423) 275-27-17"><span>+7 (423) 275-27-17</span></a></li>
-					<li><a href="tel:+7 (423) 578-80-18"><span>+7 (423) 578-80-18</span></a></li>
-					<li><a href="tel:+7 (423) 230-20-13"><span>+7 (423) 230-20-13</span></a></li>
-					<li><a href="tel:+7 (423) 275-27-17"><span>+7 (423) 275-27-17</span></a></li>
-					<li><a href="tel:+7 (423) 578-80-18"><span>+7 (423) 578-80-18</span></a></li>
-				</ul>-->
-				</div>
-				<!--contact phones end-->
+		<div class="top-panel-holder">
+			<div class="logo-alt">
+				<a href="index.html">
+					<div class="logo-alt-title">
+						<div class="logo-alt-title__fig"><span>Электроавтоматика</span></div>
+					</div>
+					<div class="logo-alt-map">
+						<div class="logo-alt-map__fig"><span>Владивосток</span></div>
+					</div>
+				</a>
+				<img style="display: none;" src="img/logo.png" alt="Электроавтоматика">
 			</div>
+			<div class="top-panel-contacts">
+				<div class="top-panel-contacts__item">
+					<!--contact phones-->
+					<!--<div class="contact-phones js-choice-wrap" data-select="false">-->
+					<div class="contact-phones">
+						<!--<a class="contact-phones__handler js-choice-open" href="#"><span>+7 (423) 230-21-37</span></a>-->
+						<a class="contact-phones__handler" href="tel:+7 (423) 230-21-37"><span>+7 (423) 230-21-37</span></a>
+						<!--<ul class="contact-phones__drop js-choice-drop">
+						<li><a href="tel:+7 (423) 230-20-13"><span>+7 (423) 230-20-13</span></a></li>
+						<li><a href="tel:+7 (423) 275-27-17"><span>+7 (423) 275-27-17</span></a></li>
+						<li><a href="tel:+7 (423) 578-80-18"><span>+7 (423) 578-80-18</span></a></li>
+						<li><a href="tel:+7 (423) 230-20-13"><span>+7 (423) 230-20-13</span></a></li>
+						<li><a href="tel:+7 (423) 275-27-17"><span>+7 (423) 275-27-17</span></a></li>
+						<li><a href="tel:+7 (423) 578-80-18"><span>+7 (423) 578-80-18</span></a></li>
+					</ul>-->
+					</div>
+					<!--contact phones end-->
+				</div>
+				<!--
 			<div class="top-panel-contacts__item">
 				<a href="mailto:info@dvemz.ru"><span>info@dvemz.ru</span></a>
 			</div>
+			-->
+			</div>
+			<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
 		</div>
+		<a href="#" class="btn-catalog btn-catalog-js"><span>Каталог</span></a>
 	</aside>
 	<!--TOP PANEL end-->
 	<!--MAIN-->
@@ -187,6 +193,17 @@
 					<div class="content user-content">
 						<div class="sheet">
 							<div class="layout-article">
+								<div class="layout-text">
+									<!--breadcrumbs-->
+									<div class="breadcrumbs">
+										<ul class="breadcrumbs__list">
+											<li><a href="#"><span title="Главная">Главная</span></a></li>
+											<li><a href="#"><span title="Каталог">Каталог</span></a></li>
+											<li><span title="Кабельно-проводниковая продукция и кабеленесущие системы">Кабельно-проводниковая продукция и кабеленесущие системы</span></li>
+										</ul>
+									</div>
+									<!--breadcrumbs end-->
+								</div>
 								<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
 								<!--view switcher-->
 								<div class="view-switcher js-view-switcher">
@@ -409,7 +426,7 @@
 	</div>
 	<!--MAIN end-->
 	<!--SIDEBAR-->
-	<aside class="catalog-menu js-tabs">
+	<aside class="catalog-menu js-tabs catalog-menu-popup-js">
 		<div class="catalog-categories">
 			<div class="catalog-categories__holder">
 				<div class="catalog-categories__row">
