--- a/src/404.html
+++ b/src/404.html
@@ -58,25 +58,25 @@
 				<div class="header__row">
 					<div class="header__cell">
 						<div class="user-options">
-							<a href="#" class="user-option__item btn-menu-js menu-btn" title="Открыть главное меню">
+							<a href="#" class="user-options__item btn-menu-js menu-btn" title="Открыть главное меню">
 								<div class="menu-btn__inner">
 									<span>Меню</span>
 									<i>&nbsp;</i>
 								</div>
 							</a>
-							<a href="#" class="user-option__item">
+							<a href="#" class="user-options__item">
 								<div class="user-option__icon">
 									<span>Текст</span>
 									<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 551.7 548.4" enable-background="new 0 0 551.7 548.4"> <path d="M353.9,374.2l-12,4.6c-1.2,0.4-3,1.1-5.1,2.5c-0.6,0.4-1.2,0.9-1.9,1.3c-0.6,0.4-1.2,0.8-1.8,1.2  c-38.7,26.4-79.2,39.8-120.2,39.8c-18.3,0-37-2.7-55.7-7.9c-42.1-11.8-76.4-32-101.9-59.9c-25.2-27.6-42.7-63.8-52-107.4  c-1.1-5-1.7-10.4-2.4-16.1c-0.3-2.4-0.6-4.8-0.9-7.2v-25.5c0.3-1.4,0.7-3.2,0.8-5.4c2.3-27.7,9.7-53.9,22-77.9  C59.9,44.6,131.8,0,210.5,0c31.4,0,61.9,7,90.8,20.9c74,35.5,114.4,96.3,120.3,180.9c3.1,44.2-8.9,87.1-35.5,127.5  c-0.9,1.3-1.6,2.6-2.3,3.7c-0.3,0.4-0.5,0.9-0.8,1.3l-8.1,13.1l10.5,11.2l0.7,0.7c0.6,0.7,1.1,1.2,1.7,1.8  c54.6,54.6,109.2,109.2,163.8,163.8c-7.8,7.8-15.6,15.7-23.6,23.6L353.9,374.2z M211.5,33.4c-98.1,0-178.2,79.8-178.4,178  c-0.1,47.6,18.4,92.5,52.1,126.3c33.8,33.9,78.6,52.5,126.3,52.6c98.3,0,178.3-80,178.4-178.3c0.1-98.3-79.8-178.4-178.1-178.5  H211.5z"></path> </svg>
 								</div>
 							</a>
-							<a href="#" class="user-option__item">
+							<a href="#" class="user-options__item">
 								<div class="user-option__icon">
 									<span>Текст</span>
 									<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 266 318.3" enable-background="new 0 0 266 318.3"> <path d="M175.1,156.3c25-14.5,41.9-41.6,41.9-72.5C217,37.6,179.4,0,133.3,0S49.5,37.6,49.5,83.8c0,30.9,16.8,57.9,41.8,72.4    C38.3,172.9,0,220.6,0,276.8v41.5h265.7l0.3-41.5C266,220.8,227.9,173.1,175.1,156.3z M69.5,83.8c0-35.2,28.6-63.8,63.8-63.8    c35.2,0,63.8,28.6,63.8,63.8s-28.6,63.8-63.8,63.8C98.1,147.5,69.5,118.9,69.5,83.8z M245.8,298.3H20v-21.5c0-59,50.7-107,113-107    s113,48,113,106.9L245.8,298.3z"></path> </svg>
 								</div>
 							</a>
-							<a href="#" class="user-option__item">
+							<a href="#" class="user-options__item">
 								<div class="user-option__icon">
 									<div class="basket-counter">1</div>
 									<span>Текст</span>
@@ -102,38 +102,42 @@
 		<!--NAVIGATION-->
 		<div class="nav-wrap nav-popup-js">
 			<nav class="nav">
+				<!--nav-->
+				<!--(1) START nav FIRST level-->
 				<ul class="nav__list nav-js">
-					<!--(1) START @@key FIRST level-->
+					<!--nav item start-->
 					<li class="">
 						<a href="#"><span>О компании</span></a>
 					</li>
-					<!--(1) END @@key FIRST level-->
-					<!--(1) START @@key FIRST level-->
+					<!--nav item end-->
+					<!--nav item start-->
 					<li class="">
 						<a href="#"><span>Производство</span></a>
 					</li>
-					<!--(1) END @@key FIRST level-->
-					<!--(1) START @@key FIRST level-->
+					<!--nav item end-->
+					<!--nav item start-->
 					<li class="">
 						<a href="#"><span>Монтажные работы</span></a>
 					</li>
-					<!--(1) END @@key FIRST level-->
-					<!--(1) START @@key FIRST level-->
+					<!--nav item end-->
+					<!--nav item start-->
 					<li class="">
 						<a href="#"><span>Сотрудничество</span></a>
 					</li>
-					<!--(1) END @@key FIRST level-->
-					<!--(1) START @@key FIRST level-->
+					<!--nav item end-->
+					<!--nav item start-->
 					<li class="">
 						<a href="#"><span>Заказ</span></a>
 					</li>
-					<!--(1) END @@key FIRST level-->
-					<!--(1) START @@key FIRST level-->
+					<!--nav item end-->
+					<!--nav item start-->
 					<li class="">
 						<a href="#"><span>Контакты</span></a>
 					</li>
-					<!--(1) END @@key FIRST level-->
+					<!--nav item start-->
 				</ul>
+				<!--(1) END nav FIRST level-->
+				<!--nav end-->
 			</nav>
 			<div class="nav-footer">
 				<div class="copyright">&copy; 2017 ОАО ДВЭМЗ</div>
