--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -597,6 +597,10 @@
 			</div>
 		</div>
 		<div class="catalog-menu-layout">
+			<div class="catalog-menu-title">
+				<a href="#" class="btn-popup-close btn-catalog-menu-close btn-catalog-close-js"><i></i><span>Закрыть</span></a>
+				<span>Каталог</span>
+			</div>
 			<!--catalog-menu-->
 			<!--(1) START catalog-menu FIRST level-->
 			<ul class="catalog-menu__list catalog-menu-js js-tab-container">
