--- a/src/automatic-products.html
+++ b/src/automatic-products.html
@@ -265,211 +265,194 @@
 									</ul>
 								</div>
 								<!--breadcrumbs end-->
-								<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
+								<h1>2Кабель силовой бронированный АВБбШв и ААБл</h1>
+								<!--view switcher-->
+								<div class="view-switcher view-switcher-js">
+									<a href="#" class="grid-view active" data-title="Показать товары плиткой"><span>Плиткой</span></a>
+									<a href="#" class="list-view" data-title="Показать товары списком"><span>Списком</span></a>
+								</div>
+								<!--view switcher end-->
 								<div class="layout-wide">
-									<!--catalog-->
-									<div class="catalog grid-view-activated">
-										<section class="catalog__list">
-											<article class="catalog__item">
-												<div class="catalog__inner">
-													<div class="catalog__figure">
-														<div class="catalog__img">
-															<img src="img/img-catalog-01.jpg" alt="Кабель и провод медный" />
+									<!--products-->
+									<div class="products view-container-js grid-view-activated">
+										<section class="products__list">
+											<article class="products__item">
+												<a href="#" class="products__inner">
+													<div class="products__figure">
+														<div class="products__img">
+															<img src="img/img-products-01.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
 														</div>
 													</div>
-													<div class="catalog__content">
-														<div class="catalog__title">Кабель и провод медный</div>
-														<div class="catalog__text">
-															<ul>
-																<li><a href="#"><span>Кабель силовой ВВГ, ВВГнг, ВВГнгLS, ВВГнгFRLS</span></a>
-																	<ul>
-																		<li><a href="#"><span>Кабель силовой ВВГ</span></a></li>
-																		<li><a href="#"><span>Кабель силовой ВВГнг</span></a></li>
-																		<li><a href="#"><span>Кабель силовой ВВГнгLS</span></a></li>
-																		<li><a href="#"><span>Кабель силовой ВВгнгFRLS</span></a></li>
-																	</ul>
-																</li>
-																<li><a href="#"><span>Кабель силовой ВБбШв;</span></a></li>
-																<li><a href="#"><span>Кабель силовой КГ</span></a></li>
-																<li><a href="#"><span>Кабель судовой КНР</span></a></li>
-																<li><a href="#"><span>Провод силовой ПВС</span></a></li>
-																<li><a href="#"><span>Провод бытовой ШВВП, ПУГНП</span></a></li>
-																<li><a href="#"><span>Провод установочный ПВ-1, ПВ-3</span></a></li>
-																<li><a href="#"><span>Провод термостойкий РКГМ</span></a></li>
-																<li><a href="#"><span>Провод без изоляции МГ</span></a></li>
-															</ul>
+													<div class="products__content">
+														<div class="products__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
+														<div class="products__stock">более 50 шт</div>
+														<div class="products__price">
+															<div class="cur">300 руб.</div>
+														</div>
+														<div class="products__options">
+															<div class="products__btn" data-href="#">В корзину</div>
 														</div>
 													</div>
-												</div>
+												</a>
 											</article>
-											<article class="catalog__item">
-												<div class="catalog__inner">
-													<div class="catalog__figure">
-														<div class="catalog__img">
-															<img src="img/img-catalog-02.jpg" alt="Кабель, провод алюминмиевый и СИП-арматура" />
+											<article class="products__item">
+												<a href="#" class="products__inner">
+													<div class="products__figure">
+														<div class="products__img">
+															<img src="img/img-products-02.jpg" alt="Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)" />
 														</div>
 													</div>
-													<div class="catalog__content">
-														<div class="catalog__title">Кабель, провод алюминмиевый и СИП-арматура</div>
-														<div class="catalog__text">
-															<ul>
-																<li><a href="#"><span>Кабель силовой АВВГ</span></a></li>
-																<li><a href="#"><span>2Кабель силовой бронированный АВБбШв и ААБл</span></a></li>
-																<li><a href="#"><span>Провод установочный АПВ, АППВ</span></a></li>
-																<li><a href="#"><span>Провод самонесущий СИП</span></a></li>
-																<li> <a href="#"><span>СИП-арматура</span></a>
-																	<ul>
-																		<li><a href="#"><span>Зажимы анкерные</span></a></li>
-																		<li><a href="#"><span>Зажимы поддерживающие и промежуточные</span></a> </li>
-																		<li><a href="#"><span>Зажимы клиновые для ответвлений</span></a></li>
-																		<li><a href="#"><span>Зажимы прокалывающие ответвительные</span></a></li>
-																		<li><a href="#"><span>Кронштейны анкерные и крюки монтажные</span></a> </li>
-																		<li><a href="#"><span>Лента монтажная, скрепа (бугели)</span></a></li>
-																		<li> <a href="#"><span>Фасадные крепления, колпачки защитные, гильзы, наконечники</span></a> </li>
-																	</ul>
-																</li>
-															</ul>
+													<div class="products__content">
+														<div class="products__title">Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)</div>
+														<div class="products__stock">нет на складе</div>
+														<div class="products__price">
+															<div class="cur">50 руб.</div>
+														</div>
+														<div class="products__options">
+															<div class="products__btn" data-href="#">В корзину</div>
 														</div>
 													</div>
-												</div>
+												</a>
 											</article>
-											<article class="catalog__item">
-												<div class="catalog__inner">
-													<div class="catalog__figure">
-														<div class="catalog__img">
-															<img src="img/__temp-img-content-carousel-01.jpg" alt="Кабель, провод терморегулирующий и комплектующие" />
+											<article class="products__item">
+												<a href="#" class="products__inner">
+													<div class="products__figure">
+														<div class="products__img">
+															<img src="img/img-products-03.jpg" alt="АВВГ 4Х50" />
 														</div>
 													</div>
-													<div class="catalog__content">
-														<div class="catalog__title">Кабель, провод терморегулирующий и комплектующие</div>
-														<div class="catalog__text">
-															<ul>
-																<li><a href="#"><span>Кабель телефонный и комплектующие</span></a></li>
-																<li><a href="#"><span>Кабель телевизионный и комплектующие</span></a></li>
-																<li><a href="#"><span>Кабель связи и комплектующие</span></a></li>
-															</ul>
+													<div class="products__content">
+														<div class="products__title">АВВГ 4Х50</div>
+														<div class="products__stock">нет на складе</div>
+														<div class="products__price">
+															<div class="no">цена по запросу</div>
+														</div>
+														<div class="products__options">
+															<div class="products__btn" data-href="#">В корзину</div>
 														</div>
 													</div>
-												</div>
+												</a>
 											</article>
-											<article class="catalog__item">
-												<div class="catalog__inner">
-													<div class="catalog__figure">
-														<div class="catalog__img">
-															<img src="img/__temp-img-content-carousel-02.jpg" alt="Кабель связи и комплектующие" />
+											<article class="products__item">
+												<a href="#" class="products__inner">
+													<div class="products__figure">
+														<div class="products__img">
+															<img src="img/img-products-04.jpg" alt="АВВГ 2х10" />
 														</div>
 													</div>
-													<div class="catalog__content">
-														<div class="catalog__title">Кабель связи и комплектующие</div>
-														<div class="catalog__text">
-															<ul>
-																<li><a href="#"><span>Кабель самогреющий и комплектующие</span></a></li>
-																<li><a href="#"><span>Провод ПНСВ</span></a></li>
-															</ul>
+													<div class="products__content">
+														<div class="products__title">АВВГ 2х10</div>
+														<div class="products__stock">более 50 шт</div>
+														<div class="products__price">
+															<div class="cur">300 руб.</div>
+														</div>
+														<div class="products__options">
+															<div class="products__btn" data-href="#">В корзину</div>
 														</div>
 													</div>
-												</div>
+												</a>
 											</article>
-											<article class="catalog__item">
-												<div class="catalog__inner">
-													<div class="catalog__figure">
-														<div class="catalog__img">
-															<img src="img/img-catalog-03.jpg" alt="Кабель контрольный и монтажный экранированный" />
+											<article class="products__item">
+												<a href="#" class="products__inner">
+													<div class="products__figure">
+														<div class="products__img">
+															<img src="img/img-products-05.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
 														</div>
 													</div>
-													<div class="catalog__content">
-														<div class="catalog__title">Кабель контрольный и монтажный экранированный</div>
-														<div class="catalog__text">
-															<ul>
-																<li><a href="#"><span>Кабель контрольный КВВГ, КВВГнг, КВВГнгLS</span></a></li>
-																<li><a href="#"><span>Кабель монтажный экранированный МКЭШ</span></a></li>
-															</ul>
+													<div class="products__content">
+														<div class="products__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
+														<div class="products__stock">нет на складе</div>
+														<div class="products__price">
+															<div class="cur">1 300 руб.</div>
+															<div class="old">1 300 руб.</div>
+														</div>
+														<div class="products__options">
+															<div class="products__btn" data-href="#">В корзину</div>
 														</div>
 													</div>
-												</div>
+												</a>
 											</article>
-											<article class="catalog__item">
-												<div class="catalog__inner">
-													<div class="catalog__figure">
-														<div class="catalog__img">
-															<img src="img/img-catalog-03.jpg" alt="Кабель-канал и  аксессуары" />
+											<article class="products__item in-cart">
+												<a href="#" class="products__inner">
+													<div class="products__figure">
+														<div class="products__img">
+															<img src="img/img-products-06.jpg" alt="АВВГ 2х10" />
 														</div>
 													</div>
-													<div class="catalog__content">
-														<div class="catalog__title">Кабель-канал и аксессуары</div>
-														<div class="catalog__text">
-															<ul>
-																<li><a href="#"><span>Кабель-канал (Россия)</span></a></li>
-																<li><a href="#"><span>Кабель-канал Legrand</span></a></li>
-																<li><a href="#"><span>Аксессуары к кабель-каналу (Россия)</span></a></li>
-																<li><a href="#"><span>Аксессуары к кабель-каналу Legrand</span></a></li>
-															</ul>
+													<div class="products__content">
+														<div class="products__title">АВВГ 2х10</div>
+														<div class="products__stock">более 50 шт</div>
+														<div class="products__price">
+															<div class="cur">1 150 руб.</div>
+															<div class="old">1 200 руб.</div>
+														</div>
+														<div class="products__options">
+															<div class="products__btn" data-href="#">В корзину</div>
 														</div>
 													</div>
-												</div>
+												</a>
 											</article>
-											<article class="catalog__item">
-												<div class="catalog__inner">
-													<div class="catalog__figure">
-														<div class="catalog__img">
-															<img src="img/img-catalog-01.jpg" alt="Трубы ПВХ, ПНД, металлорукав" />
+											<article class="products__item">
+												<a href="#" class="products__inner">
+													<div class="products__figure">
+														<div class="products__img">
+															<img src="img/img-products-07.jpg" alt="АВВГ 2х10" />
 														</div>
 													</div>
-													<div class="catalog__content">
-														<div class="catalog__title">Трубы ПВХ, ПНД, металлорукав</div>
-														<div class="catalog__text">
-															<ul>
-																<li><a href="#"><span>Трубы гладкие жесткие ПВХ</span></a></li>
-																<li><a href="#"><span>Трубы гофрированные ПВХ</span></a></li>
-																<li><a href="#"><span>Трубы двустенные гофрированные ПНД</span></a></li>
-																<li><a href="#"><span>Трубы гофрированные ПНД</span></a></li>
-																<li><a href="#"><span>Металлорукав</span></a></li>
-																<li><a href="#"><span>Металлорукав в ПВХ-изоляции НГ</span></a></li>
-																<li><a href="#"><span>Аксессуары для труб и металлорукава</span></a></li>
-															</ul>
+													<div class="products__content">
+														<div class="products__title">АВВГ 2х10</div>
+														<div class="products__stock">более 50 шт</div>
+														<div class="products__price">
+															<div class="cur">300 руб.</div>
+														</div>
+														<div class="products__options">
+															<div class="products__btn" data-href="#">В корзину</div>
 														</div>
 													</div>
-												</div>
+												</a>
 											</article>
-											<article class="catalog__item">
-												<div class="catalog__inner">
-													<div class="catalog__figure">
-														<div class="catalog__img">
-															<img src="img/img-catalog-02.jpg" alt="Лоток металлический" />
+											<article class="products__item">
+												<a href="#" class="products__inner">
+													<div class="products__figure">
+														<div class="products__img">
+															<img src="img/img-products-08.jpg" alt="АВВГ 2х10" />
 														</div>
 													</div>
-													<div class="catalog__content">
-														<div class="catalog__title">Лоток металлический</div>
-														<div class="catalog__text">
-															<ul>
-																<li><a href="#"><span>Лоток металлический</span></a></li>
-																<li><a href="#"><span>Комплектующие к лотку металлическому</span></a></li>
-															</ul>
+													<div class="products__content">
+														<div class="products__title">АВВГ 2х10</div>
+														<div class="products__stock">нет на складе</div>
+														<div class="products__price">
+															<div class="cur">1 300 руб.</div>
+															<div class="old">1 300 руб.</div>
+														</div>
+														<div class="products__options">
+															<div class="products__btn" data-href="#">В корзину</div>
 														</div>
 													</div>
-												</div>
+												</a>
 											</article>
-											<article class="catalog__item">
-												<div class="catalog__inner">
-													<div class="catalog__figure">
-														<div class="catalog__img">
-															<img src="img/img-catalog-02.jpg" alt="Муфты термоусаживаемые кабельные" />
+											<article class="products__item">
+												<a href="#" class="products__inner">
+													<div class="products__figure">
+														<div class="products__img">
+															<img src="img/img-products-09.jpg" alt="АВВГ 2х10" />
 														</div>
 													</div>
-													<div class="catalog__content">
-														<div class="catalog__title">Муфты термоусаживаемые кабельные</div>
-														<div class="catalog__text">
-															<ul>
-																<li><a href="#"><span>Концевые</span></a></li>
-																<li><a href="#"><span>Соединительные</span></a></li>
-															</ul>
+													<div class="products__content">
+														<div class="products__title">АВВГ 2х10</div>
+														<div class="products__stock">1 150 руб.</div>
+														<div class="products__price">
+															<div class="cur">1 200 руб.</div>
+														</div>
+														<div class="products__options">
+															<div class="products__btn" data-href="#">В корзину</div>
 														</div>
 													</div>
-												</div>
+												</a>
 											</article>
 										</section>
 									</div>
-									<!--catalog end-->
+									<!--products end-->
 								</div>
 							</div>
 						</div>
